--- a/layouts/partials/gallery.html
+++ b/layouts/partials/gallery.html
@@ -1,44 +1,92 @@
 <section class="gallery">
+
+
+
+
   <div id="gallery" style="visibility: hidden; height: 1px; overflow: hidden">
-    {{ $images := slice }}
+    {{ $media := slice }}
+
+
+
+    <!-- Collect images -->
     {{ range $image := .Resources.ByType "image" }}
       {{ $title := "" }}
       {{ $date := "" }}
       {{ with $image.Exif }}
         {{ $date = .Date }}
         {{ with .Tags.ImageDescription }}
-          {{/* Title from EXIF ImageDescription */}}
           {{ $title = . }}
         {{ end }}
       {{ end }}
       {{ if ne $image.Title $image.Name }}
-        {{/* Title from front matter */}}
         {{ $title = $image.Title }}
       {{ end }}
-      {{ $images = $images | append (dict
+      {{ $media = $media | append (dict
+        "Type" "image"
         "Name" $image.Name
         "Title" $title
-        "Date" $date
-        "image" $image
+        "resource" $image
         )
       }}
     {{ end }}
-    {{ range sort $images (.Params.sort_by | default "Name") (.Params.sort_order | default "asc") }}
-      {{ $image := .image }}
-      {{ $thumbnail := $image.Filter (slice images.AutoOrient (images.Process "fit 600x600")) }}
-      {{ $full := $image.Filter (slice images.AutoOrient (images.Process "fit 1600x1600")) }}
-      {{ $color := index $thumbnail.Colors 0 | default "transparent" }}
-      <a class="gallery-item" href="{{ $image.RelPermalink }}" data-pswp-src="{{ $full.RelPermalink }}" data-pswp-width="{{ $full.Width }}" data-pswp-height="{{ $full.Height }}" title="{{ .Title }}" itemscope itemtype="https://schema.org/ImageObject" style="aspect-ratio: {{ $thumbnail.Width }} / {{ $thumbnail.Height }}">
-        <figure style="background-color: {{ $color }}; aspect-ratio: {{ $thumbnail.Width }} / {{ $thumbnail.Height }}">
-          <img class="lazyload" width="{{ $thumbnail.Width }}" height="{{ $thumbnail.Height }}" data-src="{{ $thumbnail.RelPermalink }}" alt="{{ .Title }}" />
-        </figure>
-        <meta itemprop="contentUrl" content="{{ $image.RelPermalink }}" />
-        {{ with site.Params.Author }}
-          <span itemprop="creator" itemtype="https://schema.org/Person" itemscope>
-            <meta itemprop="name" content="{{ site.Params.Author.name }}" />
-          </span>
-        {{ end }}
-      </a>
+
+    <!-- Collect videos -->
+    {{ range $video := .Resources.ByType "video" }}
+      {{ $title := $video.Name }}
+
+      <!-- Fallback if JSON metadata is missing -->
+
+      {{ $media = $media | append (dict
+        "Type" "video"
+        "Name" $video.Name
+        "Title" $title
+        "Width" .Params.width
+        "Height" .Params.height
+        "resource" $video
+        )
+      }}
+    {{ end }}
+
+
+    <!-- Sort media if necessary -->
+    {{ range sort $media (.Params.sort_by | default "Name") (.Params.sort_order | default "asc") }}
+      {{ $resource := .resource }}
+
+      <!-- Display images -->
+      {{ if eq .Type "image" }}
+        {{ $thumbnail := $resource.Filter (slice images.AutoOrient (images.Process "fit 600x600")) }}
+        {{ $full := $resource.Filter (slice images.AutoOrient (images.Process "fit 1600x1600")) }}
+        {{ $color := index $thumbnail.Colors 0 | default "transparent" }}
+
+        <a class="gallery-item" href="{{ $full.RelPermalink }}" data-pswp-src="{{ $full.RelPermalink }}" data-pswp-width="{{ $full.Width }}" data-pswp-height="{{ $full.Height }}" title="{{ .Title }}" itemscope itemtype="https://schema.org/ImageObject" style="aspect-ratio: {{ $thumbnail.Width }} / {{ $thumbnail.Height }}">
+          <figure style="background-color: {{ $color }}; aspect-ratio: {{ $thumbnail.Width }} / {{ $thumbnail.Height }}">
+            <img class="lazyload" width="{{ $thumbnail.Width }}" height="{{ $thumbnail.Height }}" data-src="{{ $thumbnail.RelPermalink }}" alt="{{ .Title }}" />
+          </figure>
+        </a>
+
+
+
+      {{ else if eq .Type "video" }}
+        <!-- Display videos -->
+
+
+
+
+
+        <a class="gallery-item" href="{{ $resource.RelPermalink }}"
+        data-pswp-type="video"
+        data-pswp-width="{{ .Width }}"
+        data-pswp-height="{{ .Height }}"
+        type="{{ $resource.MediaType.Type }}"
+        title="{{ .Title }}" itemscope target="_blank">
+          <figure>
+            <video width="{{ .Width }}" height="{{ .Height }}" autoplay="autoplay" loop="loop" preload="auto" muted>
+              <source src="{{ $resource.RelPermalink }}" type="{{ $resource.MediaType.Type }}"></source>
+            </video>
+            <img class="lazyload" width="{{ .Width }}" height="{{ .Height }}" data-src="" alt="" />
+          </figure>
+        </a>
+      {{ end }}
     {{ end }}
   </div>
 </section>
